Pull request #1301: fix ace selection in dark
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit 5a86c137bd7e16d0c9b4b03b388f15bf4ffe1d45
Merge: 4654cfec9 ba5d3df6d
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jul 21 17:05:21 2022 +0300

    merge

commit 4654cfec9fa8a97256e3b41fa4815bc59e097815
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jul 21 10:44:30 2022 +0300

    AG-15455 fix variable

commit c106a04cc6a88478085a1aab47422d74cfb480a8
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jul 21 10:32:39 2022 +0300

    AG-15455 fix variable

commit d9c3d058471eb510af9112f09431593be06aefea
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jul 21 10:24:42 2022 +0300

    AG-15455 fix ace selection in dark

--- a/Extension/src/pages/common/components/Editor/editor.pcss
+++ b/Extension/src/pages/common/components/Editor/editor.pcss
@@ -210,6 +210,7 @@
     & .ace_selection {
         border: 0!important;
         border-radius: 0;
+        background-color: var(--blue-selection)!important;
     }
 }
 
