--- a/Extension/src/pages/common/styles/vars.pcss
+++ b/Extension/src/pages/common/styles/vars.pcss
@@ -23,6 +23,7 @@
     /*EDITOR*/
     --green-editor: #338033;
     --yellow-editor500: #ffff00;
+    --blue-selection: rgb(181, 213, 255);
     /* - dark mode*/
     --cyan-editor: #4093d6;
     --yellow-editor: #dbdb84;
@@ -59,6 +60,7 @@
         --orange-row: #4d350d;
         --orange-row-hover: #61410B;
         --orange-row-active: #744c0a;
+        --blue-selection: #556a86;
     }
 
     --switch-btn-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
@@ -102,6 +104,7 @@
     --orange-row: #4d350d;
     --orange-row-hover: #61410B;
     --orange-row-active: #744c0a;
+    --blue-selection: #556a86;
 }
 
 .light-mode {
@@ -116,4 +119,5 @@
     --orange-row: #ffe4b7;
     --orange-row-hover: #ffdda5;
     --orange-row-active: #ffcf7d;
+    --blue-selection: rgb(181, 213, 255);
 }
